src/CSS/main/hero.css
.hero {
  height: 720px;
  background-image: url(/image/main/hero/hero-mob.jpg);
  background-repeat: no-repeat;
  background-position: top center;
  background-size: cover;
  overflow: hidden;
}
.hero-conrainer {
  position: relative;
  max-width: 361px;
  padding-left: 16px;
  padding-right: 16px;
  width: 100%;
  height: 100%;
}
.hero-wraper {
  position: absolute;
  top: 47%;
  left: 7%;
  border-radius: 50%;
  width: 555px;
  height: 533px;
  background-color: rgb(229, 227, 228, 0.7);
}
.hero-wraper-text {
  max-width: 297px;
  padding-top: 158px;
  padding-left: 50px;
  z-index: 9;
}
.hero-title {
  font-family: var(--second-family);
  font-size: 26px;
  margin-bottom: 16px;
}
.hero-text {
  font-family: var(--second-family);
  font-style: italic;
  font-weight: 400;
  font-size: 18px;
  line-height: 150%;
  letter-spacing: 0.02em;
  color: var(--black);
  margin-bottom: 32px;
}
.hero-btn {
  font-size: 20px;
  color: var(--white);
  border-radius: 15px;
  border: none;
  width: 224px;
  height: 70px;
  box-shadow: 1px 1px 4px 1px rgba(45, 50, 50, 0.31);
  background: var(--purple);
  cursor: pointer;
}
@media screen and (min-width: 1440px) {
  .hero {
    height: 970px;
    background-image: url(/image/main/hero/hero.jpg);
  }
  .hero-conrainer {
    max-width: 1180px;
    padding-left: 130px;
    padding-right: 130px;
  }
  .hero-wraper {
    top: 20%;
    left: 50%;
    width: 1067px;
    height: 1003px;
  }
  .hero-wraper-text {
    max-width: 396px;
    padding-top: 372px;
    padding-left: 133px;
    z-index: 9;
  }
  .hero-title {
    font-size: 36px;
    color: var(--black);
    margin-bottom: 24px;
  }
  .hero-text {
    font-size: 24px;
    margin-bottom: 44px;
  }
  .hero-btn {
    width: 292px;
  }
}

